# claude-md-snippets-manager

./: CLAUDE.md  Cargo.toml  README.md  claude-md-snippets-linux-x64  claude-md-snippets-manager-linux-x64  claude-md-snippets-manager-v0.2.0-linux-x64  claude-md-snippets-manager-v0.3.0-linux-x64  claude-md-snippets-manager-v0.4.0-linux-x64  install.sh
.claude.local/snippets/: running_gui_applications-769eb3ad.md  running_gui_applications.md  xdotool_automation.md
src/: config.rs  extract.rs  github.rs  install.rs  main.rs  publish.rs  search.rs
